--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "016-videos",
   "version": "0.1.0",
-  "homepage": "https://eng-milan.github.io/016-videos/",
+  "homepage": "https://eng-milan.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
